# libfraction

./: .gitignore  CMakeLists.txt  Doxygen.in  Makefile  Makefile.am  Makefile.in  autogen.sh  configure  configure.in  fraction.c  fraction.h  main.c
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  fraction.c  fraction.h  main.c
src/test/: fraction_test.c  main.c
test/: CMakeLists.txt  Makefile.am  Makefile.in  fraction_test.c  main.c
